src/test/ui/fail-no-dead-code.stderr
error: function is never used: `foo`
  --> $DIR/fail-no-dead-code.rs:14:1
   |
LL | fn foo() { //~ ERROR function is never used
   | ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/fail-no-dead-code.rs:11:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

